# kube-ext-api-server

./: .gitignore  BUILD.bazel  kubeconfig
cmd/apiserver/: main.go
cmd/controller-manager/: main.go
docs/examples/stack/: stack.yaml
pkg/apis/: doc.go  zz_generated.api.register.go
pkg/apis/aerokite/: doc.go  zz_generated.api.register.go  zz_generated.deepcopy.go  zz_generated.defaults.go
pkg/apis/aerokite/install/: zz_generated.api.register.go
pkg/apis/aerokite/v1alpha1/: doc.go  stack_types.go  stack_types_test.go  v1alpha1_suite_test.go  zz_generated.api.register.go  zz_generated.conversion.go  zz_generated.deepcopy.go
pkg/client/clientset_generated/clientset/: clientset.go
pkg/client/clientset_generated/clientset/fake/: clientset_generated.go  register.go
pkg/client/clientset_generated/clientset/scheme/: register.go
pkg/client/clientset_generated/internalclientset/: clientset.go
pkg/client/clientset_generated/internalclientset/fake/: clientset_generated.go  register.go
pkg/client/clientset_generated/internalclientset/scheme/: register.go
pkg/client/informers_generated/externalversions/: factory.go  generic.go
pkg/client/informers_generated/externalversions/aerokite/: interface.go
pkg/client/informers_generated/internalversion/: factory.go  generic.go
pkg/controller/: zz_generated.api.register.go
pkg/controller/sharedinformers/: zz_generated.api.register.go
pkg/controller/stack/: controller.go  controller_test.go  stack_suite_test.go  zz_generated.api.register.go
pkg/openapi/: openapi_generated.go
sample/: stack.yaml
(+21 files in other folders)
